# application

./: .env.example  .gitignore  CLAUDE.md  DevConsole_Hub_Agent_Spec.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
docker/: Dockerfile.linux
docs/: AI_ASSISTANT_PANEL.md  ARCHITECTURE.md  PLAN.md  STATUS.md
scripts/: build-linux.sh  gen-icons.sh
site/: index.html  index.php
site/lang/: en.php  fr.php  kk.php  ru.php  zh.php
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  export.rs  lib.rs  main.rs  pty_manager.rs
src/components/: AiPanel.tsx  CommandPalette.tsx  ContextMenu.tsx  GlobalSearch.tsx  Layout.tsx  SettingsDialog.tsx  TerminalPanel.tsx  Toast.tsx  TreePanel.tsx  WikiPanel.tsx  WikiToolbar.tsx
src/components/dialogs/: CreateConsoleDialog.tsx  CreateProjectDialog.tsx  CreateWorkspaceDialog.tsx  EditConsoleDialog.tsx  ExportDialog.tsx  ImportDialog.tsx
src/lib/: aiProviders.ts  i18n.ts  tauriCommands.ts  themes.ts
src/locales/: en.json  fr.json  kk.json  ru.json  zh.json
src/stores/: appStore.ts
src/styles/: globals.css
src/types/: index.ts
