[package]
name = "consoles-work"
version = "0.1.0"
description = "Multi-project terminal manager with integrated knowledge base"
authors = ["consoles.work"]
edition = "2021"

[lib]
name = "devconsole_hub_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# ── Tauri core ──
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Database ──
rusqlite = { version = "0.31", features = ["bundled-sqlcipher"] }

# ── PTY (терминальные сессии) ──
# portable-pty работает на Windows, macOS, Linux
portable-pty = "0.8"

# ── Утилиты ──
uuid = { version = "1", features = ["v4"] }
dirs = "5"                    # пути к домашней директории
chrono = { version = "0.4", features = ["serde"] }

# ── Экспорт/импорт (шифрование) ──
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"

[profile.release]
# Оптимизация размера бинарника
strip = true
lto = true
codegen-units = 1
panic = "abort"
